--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,8 @@
 		<input type="text" class="form-control" ng-model="user.token" placeholder="Token">
 	</div>
 	<div class="form-group col-xs-12 col-md-2">
-		<label for="Milestone">Milestone</label>
-		<input type="text" class="form-control" ng-model="milestone" placeholder="Milestone">
+		<label for="Project ID">Project ID</label>
+		<input type="text" class="form-control" ng-model="milestone" placeholder="Project ID">
 	</div>
 	<div class="form-group col-xs-12 col-md-12">
 		<label for="Group">Group</label>
@@ -46,7 +46,7 @@
 			<span class="glyphicon glyphicon-search"></span> Search data</button>
 	</div>
 	<div class="form-group col-xs-3 col-md-3">
-		<button ng-if="exportButton" type="button" ng-csv="getArray()" csv-header="['Title', 'Description', 'State', 'CreateAt', 'UpdateAt', 'ClosedAt', 'Labels', 'Author Name', 'Author Username', 'Assignee Name', 'Assignee Username', 'Milestone', 'IdIssue', 'Duo Date']"
+		<button ng-if="exportButton" type="button" ng-csv="getArray()" csv-header="['Project', 'IssueId', 'Title', 'State', 'CreateAt', 'UpdateAt', 'ClosedAt', 'Labels', 'Author Name', 'Author Username', 'Assignee Name', 'Assignee Username', 'Milestone', 'Web URL']"
 		 filename="Reporter.csv" class="btn btn-default">
 			<span class="glyphicon glyphicon-download-alt"></span> Export to CSV</button>
 	</div>
